--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
     <title>Pokrastemon</title>
 
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="background-image">
+    <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
